# MovieGenrePrection

./: README.md  pyproject.toml  run.py
app/config/: model_config.py
app/models/: inference.py  train.py
app/models/artifacts/: encoded_classes.npy  mlp.pkl
app/utils/: errors.py
config/: model_config.py
models/: inference.py  train.py  utils.py
models/artifacts/: perfromance.csv
tests/: test_inference.py  test_run.py  test_train.py
tests/resources/: encoded.npy  val_results_loc.csv
