[tool.poetry]
name = "movie genre classification"
version = "0.1.0"
description = ""
authors = ["Parth Pahwa <parth.pahwa95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.2.2"
flask = "^2.3.2"
flask-restful = "^0.3.9"
torch = "^2.0.1"
sentence-transformers = "^2.2.2"
pandas = "^2.0.1"
datasets = "^2.12.0"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
